# tbottest

./: .buildinfo  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  boardlocking.html  boardspecific.html  build-docs.sh  completions.sh  connector.html  decorators.html  generic.html  genindex.html  index.html  iniconfig.html  iniconfighelper.html  labgeneric.html  machineinit.html  mypy.ini  newtbot_starter.py  objects.inv  powercontrol.html  py-modindex.html  pyproject.toml  quickstart.html  search.html  searchindex.js  setup.py  tc.html  tips.html
.doctrees/: boardlocking.doctree  boardspecific.doctree  connector.doctree  decorators.doctree  environment.pickle  generic.doctree  index.doctree  iniconfig.doctree  iniconfighelper.doctree  labgeneric.doctree  machineinit.doctree  powercontrol.doctree  quickstart.doctree  tc.doctree  tips.doctree
Documentation/: build-docs.sh  build-pdf-docs.sh  conf.py  connector.rst  decorators.rst  generic.rst  index.rst  iniconfig.rst  iniconfighelper.rst  machineinit.rst  powercontrol.rst  tc.rst  tips.rst
_images/: aafig-077e0020b00158de2826ce5e866022c625f5718a.svg.aafig
_modules/: index.html
_sources/: boardlocking.rst.txt  boardspecific.rst.txt  connector.rst.txt  decorators.rst.txt  generic.rst.txt  index.rst.txt  labgeneric.rst.txt  machineinit.rst.txt  powercontrol.rst.txt  quickstart.rst.txt  tc.rst.txt  tips.rst.txt
_static/: documentation_options.js
scripts/: create_setup.sh  remove_steuerzeichen.py
tbottest/: boardgeneric.py  builders.py  connector.py  dummy.py  (+9 more)
(+104 files in other folders)
